[BE - Transactions per user] Use current fake controllers